--- a/src/project/company/management/view/MainFrame.form
+++ b/src/project/company/management/view/MainFrame.form
@@ -54,7 +54,7 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="jLabel1" pref="326" max="32767" attributes="0"/>
+              <Component id="jLabel1" max="32767" attributes="0"/>
               <Component id="jPanel3" alignment="0" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
